tests/ui/discord-frontend/command_macro/expected_plugin.stderr
error: expected `plugin`
  --> tests/ui/discord-frontend/command_macro/expected_plugin.rs:32:5
   |
LL |     expected_plugin = PluginIdent
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

